--- a/elements/elements.html
+++ b/elements/elements.html
@@ -1,1 +1,3 @@
 <link rel="import" href="test-app/test-app.html">
+<link rel="import" href="app-scaffold/app-scaffold.html">
+<link rel="import" href="fc-app/fc-app.html">
