--- a/imports.html
+++ b/imports.html
@@ -1,11 +1,26 @@
 <link href="elements/elements.html">
 
 
+<link rel="import" href="bower_components/app-router/app-router.html">
+<link rel="import" href="bower_components/core-drawer-panel/core-drawer-panel.html">
+<link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+<link rel="import" href="bower_components/core-icon/core-icon.html">
+<link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
+<link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+<link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
 <link rel="import" href="bower_components/firebase-element/firebase-element.html">
 <link rel="import" href="bower_components/firebase-element/firebase-login.html">
+<link rel="import" href="bower_components/font-roboto/roboto.html">
+<link rel="import" href="bower_components/more-routing/more-route-item.html">
+<link rel="import" href="bower_components/paper-button/paper-button.html">
+<link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="bower_components/paper-input/paper-autogrow-textarea.html">
+<link rel="import" href="bower_components/paper-input/paper-input-decorator.html">
+<link rel="import" href="bower_components/paper-input/paper-input.html">
+<link rel="import" href="bower_components/paper-shadow/paper-shadow.html">
+<link rel="import" href="bower_components/paper-slider/paper-slider.html">
+<link rel="import" href="bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="//cdn.jsdelivr.net/polymer/latest/polymer.js">
 <link rel="import" href="bower_components/pvc-globals/pvc-globals.html">
-<link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
-<link rel="import" href="bower_components/core-icon-button/core-icon-button.html">
-<link rel="import" href="bower_components/core-icons/core-icons.html">
-<link rel="import" href="bower_components/core-animated-pages/core-animated-pages.html">
+<script src="bower_components/time-elements/time-elements.js"></script>
